--- a/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
+++ b/www.nass.gov.ng/a26dd6cd219c69dde84917c86ae24952c3b5960c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 16:56:26 GMT
+    - Tue, 27 Mar 2018 21:30:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GnVzkygvcxiMNB%2CRQku5k1; path=/
+    - PHPSESSID=dSslzju-C5wxnK89yEbII0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 16:56:26 GMT
+recorded_at: Tue, 27 Mar 2018 21:30:35 GMT
