--- a/www.nass.gov.ng/07236db57893a9639696ab6dc7776990c54bf746.yml
+++ b/www.nass.gov.ng/07236db57893a9639696ab6dc7776990c54bf746.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 16:57:17 GMT
+    - Tue, 27 Mar 2018 21:31:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b2YsVuAi4VXw7FCqMzE8h1; path=/
+    - PHPSESSID=IqlOMKnDZ7oPSA7fqRx%2CF1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 16:57:18 GMT
+recorded_at: Tue, 27 Mar 2018 21:31:48 GMT
