--- a/www.nass.gov.ng/a73d4e72eaa91d46355e63b83864f888e00e10f3.yml
+++ b/www.nass.gov.ng/a73d4e72eaa91d46355e63b83864f888e00e10f3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:04:05 GMT
+    - Tue, 27 Mar 2018 21:38:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=J%2CEdzYOclzgAH4zFLXchL3; path=/
+    - PHPSESSID=y78TR57ynEL1KtAFkt%2CmH1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:04:05 GMT
+recorded_at: Tue, 27 Mar 2018 21:38:31 GMT
