--- a/www.nass.gov.ng/a95facf8a8c9789a099734ba3cc3bcfe5b1ee492.yml
+++ b/www.nass.gov.ng/a95facf8a8c9789a099734ba3cc3bcfe5b1ee492.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:05:43 GMT
+    - Tue, 27 Mar 2018 21:40:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CHotOs8vWYdg9iq0OZF1N1; path=/
+    - PHPSESSID=uLqP8hAPt1uL8SR6BemV63; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:05:44 GMT
+recorded_at: Tue, 27 Mar 2018 21:40:05 GMT
