--- a/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
+++ b/www.nass.gov.ng/d8982cee78527514c80bc51b642093fd5c1c42f9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:08:51 GMT
+    - Tue, 27 Mar 2018 21:44:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=BEB%2C95BgdMUfbx8AskkvP2; path=/
+    - PHPSESSID=WduzPAD3sl-4bBQOTFaWd1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:08:51 GMT
+recorded_at: Tue, 27 Mar 2018 21:44:54 GMT
