--- a/www.nass.gov.ng/f73ea8bae0d937fb33f5ff40a6df0adc93d35f04.yml
+++ b/www.nass.gov.ng/f73ea8bae0d937fb33f5ff40a6df0adc93d35f04.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:10:22 GMT
+    - Tue, 27 Mar 2018 21:46:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ry4%2Ct6TTTvXHM0ERomjfr3; path=/
+    - PHPSESSID=WNQN8O418faCzM4J017Mb3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:10:22 GMT
+recorded_at: Tue, 27 Mar 2018 21:46:12 GMT
