--- a/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
+++ b/www.nass.gov.ng/145f3ffb5152f0431e54ec13ae70c3fb3095cb6a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:34:59 GMT
+    - Tue, 27 Mar 2018 22:09:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=uNfRjf897e-287a4NO%2CEI2; path=/
+    - PHPSESSID=MPOWjHihGN3-HJnQt3Hs70; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:34:59 GMT
+recorded_at: Tue, 27 Mar 2018 22:09:26 GMT
