--- a/www.nass.gov.ng/45a20136eafe7c02a34d78c95ffb3c558ec26832.yml
+++ b/www.nass.gov.ng/45a20136eafe7c02a34d78c95ffb3c558ec26832.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:39:10 GMT
+    - Tue, 27 Mar 2018 22:15:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4h%2CJo5MOt7RoZbBrNp2rJ2; path=/
+    - PHPSESSID=6em2eyXE65P177dluvDfm3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:39:11 GMT
+recorded_at: Tue, 27 Mar 2018 22:15:18 GMT
