--- a/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
+++ b/www.nass.gov.ng/2db8738f3d273aef9510c9083d1412331a635e20.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 17:52:41 GMT
+    - Tue, 27 Mar 2018 22:29:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ktzpJagf1vEqb8YmkPp%2CN0; path=/
+    - PHPSESSID=YixlHSepk9tOYAG6S0oWL0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 17:52:41 GMT
+recorded_at: Tue, 27 Mar 2018 22:29:00 GMT
