--- a/www.nass.gov.ng/ebd9a7ce628ff8674703f13ef98e6ed4bb91a9b8.yml
+++ b/www.nass.gov.ng/ebd9a7ce628ff8674703f13ef98e6ed4bb91a9b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:02:12 GMT
+    - Tue, 27 Mar 2018 22:37:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XVlkD9l3sz1I64bfsUUKb2; path=/
+    - PHPSESSID=8LlHV%2Ce%2C%2CDjbWDKWmPXHX3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:02:13 GMT
+recorded_at: Tue, 27 Mar 2018 22:38:00 GMT
