--- a/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
+++ b/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:02:59 GMT
+    - Tue, 27 Mar 2018 22:39:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ci7ESzubXL%2Cg18vm7pG6y1; path=/
+    - PHPSESSID=IwEiapipZEw9v1NPMlUyv0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:02:59 GMT
+recorded_at: Tue, 27 Mar 2018 22:39:09 GMT
