--- a/www.nass.gov.ng/2288eced1d519bfa35f1d0fd3a0e0b26812d14a4.yml
+++ b/www.nass.gov.ng/2288eced1d519bfa35f1d0fd3a0e0b26812d14a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:05:18 GMT
+    - Tue, 27 Mar 2018 22:41:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Mq%2CpXk2Ce%2CeTqDWKpOxv-3; path=/
+    - PHPSESSID=Q4-dtSMvaMBr7S%2CVGFRGg1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:05:18 GMT
+recorded_at: Tue, 27 Mar 2018 22:41:12 GMT
