--- a/www.nass.gov.ng/3bf71f6175f2f1abae7a29d4c23003808b7a2842.yml
+++ b/www.nass.gov.ng/3bf71f6175f2f1abae7a29d4c23003808b7a2842.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:06:29 GMT
+    - Tue, 27 Mar 2018 22:43:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Tz00FG2YU3l6gDgvak%2Cx91; path=/
+    - PHPSESSID=2SfZPxpiInZ084tANNVCB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:06:29 GMT
+recorded_at: Tue, 27 Mar 2018 22:43:21 GMT
