--- a/www.nass.gov.ng/fb10964bbdbdb8fa69f72d025bd6dfa86da6919c.yml
+++ b/www.nass.gov.ng/fb10964bbdbdb8fa69f72d025bd6dfa86da6919c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:06:49 GMT
+    - Tue, 27 Mar 2018 22:43:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GBz%2ConuANsV2yVd7WtC4z3; path=/
+    - PHPSESSID=H00aT1CnVhVIr935xMVKX0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:06:49 GMT
+recorded_at: Tue, 27 Mar 2018 22:43:55 GMT
