--- a/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
+++ b/www.nass.gov.ng/8a17050bb4ccd1d83b20e9adad44b98e89ffea6c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 26 Mar 2018 18:14:07 GMT
+    - Tue, 27 Mar 2018 22:50:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4QsI58mq%2CIRSgnoIbS-UP3; path=/
+    - PHPSESSID=q64OQloxvPwpx8yqK6Dl-3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 26 Mar 2018 18:14:07 GMT
+recorded_at: Tue, 27 Mar 2018 22:50:53 GMT
